<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/age_text_view"
        app:layout_constraintEnd_toEndOf="@+id/name_text_view"
        app:layout_constraintStart_toStartOf="@+id/name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    <EditText
        android:id="@+id/city_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/city_text_view"
        app:layout_constraintEnd_toEndOf="@+id/age_text_view"
        app:layout_constraintStart_toStartOf="@+id/age_text_view"
        app:layout_constraintTop_toBottomOf="@+id/age_text_view" />

    <EditText
        android:id="@+id/college_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/college_name_text_view"
        app:layout_constraintEnd_toEndOf="@+id/city_text_view"
        app:layout_constraintStart_toStartOf="@+id/city_text_view"
        app:layout_constraintTop_toBottomOf="@+id/city_text_view" />

    <EditText
        android:id="@+id/profession_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profession_text_view"
        app:layout_constraintStart_toStartOf="@+id/college_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/college_name_text_view" />

    <EditText
        android:id="@+id/animal_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/animal_type_text_view"
        app:layout_constraintEnd_toEndOf="@+id/profession_text_view"
        app:layout_constraintStart_toStartOf="@+id/profession_text_view"
        app:layout_constraintTop_toBottomOf="@+id/profession_text_view" />

    <EditText
        android:id="@+id/pet_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pet_name_text_view"
        app:layout_constraintEnd_toEndOf="@+id/animal_type_text_view"
        app:layout_constraintStart_toStartOf="@+id/animal_type_text_view"
        app:layout_constraintTop_toBottomOf="@+id/animal_type_text_view" />

    <Button
        android:id="@+id/story_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/story_button"
        app:layout_constraintEnd_toEndOf="@+id/pet_name_text_view"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/pet_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/pet_name_text_view" />

    <TextView
        android:id="@+id/story_text_view"
        android:layout_width="354dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/story_text_view"
        app:layout_constraintEnd_toEndOf="@+id/story_button"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/story_button"
        app:layout_constraintTop_toBottomOf="@+id/story_button" />
</androidx.constraintlayout.widget.ConstraintLayout>